added custom leaflet map to field_site create form

--- a/frontend/templates/layouts/django-material-dashboard/base-fullscreen.html
+++ b/frontend/templates/layouts/django-material-dashboard/base-fullscreen.html
@@ -39,7 +39,7 @@
   {% block stylesheets %}
     <link href="{% static 'assets/css/custom-dashboard.css' %}" rel="stylesheet" />
   {% endblock stylesheets %}
-
+  {% block extrahead %}{% endblock %}
 </head>
 <body class="bg-gray-200">
 
