--- a/frontend/templates/layouts/django-material-dashboard/base.html
+++ b/frontend/templates/layouts/django-material-dashboard/base.html
@@ -39,7 +39,7 @@
   {% block stylesheets %}
     <link href="{% static 'assets/css/custom-dashboard.css' %}" rel="stylesheet" />
   {% endblock stylesheets %}
-
+  {% block extrahead %}{% endblock %}
 </head> 
 <body class="g-sidenav-show bg-gray-200">
   
