updated form-leaflet template style

--- a/frontend/templates/includes/django-material-dashboard/form-leaflet.html
+++ b/frontend/templates/includes/django-material-dashboard/form-leaflet.html
@@ -27,9 +27,10 @@
    </div>
       {% endfor %}
       <!-- begin map -->
-      <div class="row">
+      <div id="row">
           <p> Manually specify your own latitude and longitude values and <strong>Jump there</strong> or add the site through the map.</p>
-          <div id="div_id_latlng" class="form-row align-items-center">
+      </div>
+      <div id="div_id_latlng" class="row">
               <div class="col-5">
                   <label for="id_lat" class="requiredField sr-only">Latitude:<span class="asteriskField">*</span></label>
                   <div class="input-group input-group-outline my-3">
