updated form-leaflet template style

--- a/frontend/templates/includes/django-material-dashboard/form-leaflet.html
+++ b/frontend/templates/includes/django-material-dashboard/form-leaflet.html
@@ -30,7 +30,7 @@
       <div id="row">
           <p> Manually specify your own latitude and longitude values and <strong>Jump there</strong> or add the site through the map.</p>
       </div>
-      <div id="div_id_latlng" class="row">
+      <div id="div_id_latlng" class="row align-items-center">
               <div class="col-5">
                   <label for="id_lat" class="requiredField sr-only">Latitude:<span class="asteriskField">*</span></label>
                   <div class="input-group input-group-outline my-3">
@@ -48,7 +48,7 @@
               </div>
           </div>
       </div>
-      <div class="row">
+      <div class="row mb-4">
           <div id="div_readonly_id_geom" class="form-group">
               <label for="readonly_id_geom" class="requiredField sr-only">
                   JSON Geometry (populates after clicking <span>Jump there</span> or adding site through the map):<span class="asteriskField">*</span>
