--- a/frontend/templates/includes/django-material-dashboard/form-leaflet.html
+++ b/frontend/templates/includes/django-material-dashboard/form-leaflet.html
@@ -30,7 +30,7 @@
       <div id="row">
           <p> Manually specify your own latitude and longitude values and <strong>Jump there</strong> or add the site through the map.</p>
       </div>
-      <div id="div_id_latlng" class="row align-items-center">
+      <div id="div_id_latlng" class="row d-flex align-items-center justify-content-center">
               <div class="col-5">
                   <label for="id_lat" class="requiredField sr-only">Latitude:<span class="asteriskField">*</span></label>
                   <div class="input-group input-group-outline my-3">
