updated field_site js static files

--- a/frontend/templates/includes/django-material-dashboard/form-leaflet.html
+++ b/frontend/templates/includes/django-material-dashboard/form-leaflet.html
@@ -27,7 +27,7 @@
    </div>
       {% endfor %}
       <!-- begin map -->
-      <div id="row">
+      <div id="row mt-2">
           <p> Manually specify your own latitude and longitude values and <strong>Jump there</strong> or add the site through the map.</p>
       </div>
       <div id="div_id_latlng" class="row d-flex align-items-center justify-content-center">
