--- a/frontend/templates/home/django-material-dashboard/field-add-fieldsite.html
+++ b/frontend/templates/home/django-material-dashboard/field-add-fieldsite.html
@@ -1,7 +1,7 @@
-{% extends "layouts/django-material-dashboard/base.html" %}
+{% extends "home/django-material-dashboard/field-add.html" %}
 {% load static leaflet_tags %}
 
-{% block title %} Add {% endblock %}
+{% block title %}{% endblock %}
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}{% endblock stylesheets %}
@@ -15,29 +15,7 @@
     <script src="{% static 'assets/js/field_site/leaflet-pip.js' %}"></script>
 {% endblock extrahead %}
 
-{% block content %}
-
-  <div class="container-fluid py-4">
-    <div class="page-header min-height-300 border-radius-xl mt-4"
-           style="background-image: url('https://images.unsplash.com/photo-1533084417605-e538a510d50a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1920&q=80');">
-        <span class="mask bg-gradient-dark opacity-6"></span>
-    </div>
-
-    <div class="card card-body mx-3 mx-md-4 mt-n6">
-      <div class="row min-vh-80 h-100">
-        <div class="col-12">
-          <h3 class="text-center">{{ page_title|title }}</h3>
-        </div>
-          {% include 'includes/django-material-dashboard/form-leaflet.html' %}
-      </div>
-    </div>
-
-
-    {% include 'includes/django-material-dashboard/footer.html' %}
-
-  </div>
-
-{% endblock content %}
+{% block content %}{% endblock content %}
 
 <!-- Specific Page JS goes HERE  -->
 {% block javascripts %}{% endblock javascripts %}
