changed tile provider with leaflet-providers extension

--- a/frontend/templates/home/django-material-dashboard/field-add-fieldsite.html
+++ b/frontend/templates/home/django-material-dashboard/field-add-fieldsite.html
@@ -7,6 +7,7 @@
     {% leaflet_js plugins="forms" %}
     {% leaflet_css plugins="forms" %}
     <script src="{% static 'assets/js/plugins/jquery-3.4.1.min.js' %}"></script>
+    <script src="{% static 'assets/js/plugins/leaflet-providers.js' %}"></script>
     <script src="{% static 'assets/js/field_site/WBDHU8_MENH_NEA.js' %}"></script>
     <script src="{% static 'assets/js/field_site/field-site-add.js' %}"></script>
     <script src="{% static 'assets/js/field_site/field-site-add-readonly.js' %}"></script>
