--- a/frontend/templates/home/django-material-dashboard/field-detail-fieldsite.html
+++ b/frontend/templates/home/django-material-dashboard/field-detail-fieldsite.html
@@ -25,7 +25,7 @@
             </a>
           </div>
         <div class="col-md-1 d-flex align-items-center">
-            <a href="{% url 'add_fieldsitedetail' object.site_id.id object.sample_material.id object.purpose %}">
+            <a href="{% url 'add_samplelabelrequestsite' object.site_id.id %}">
               <i class="material-icons text-secondary text-center me-2 d-flex align-items-center justify-content-center text-lg" data-bs-toggle="tooltip" data-bs-placement="top" title="Add {{ page_title|title }}">add_box</i>
             </a>
           </div>
