--- a/frontend/templates/includes/django-material-dashboard/sidebar.html
+++ b/frontend/templates/includes/django-material-dashboard/sidebar.html
@@ -1,117 +1,138 @@
 {% load static %}
 <aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3   bg-gradient-dark" id="sidenav-main">
-    <div class="sidenav-header">
-      <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
-      <a class="navbar-brand m-0" 
-         href="{% url 'dashboard' %}" target="_blank">
-        <img src="{% static 'assets/img/logo-medna-light.png' %}" class="navbar-brand-img h-100" alt="main_logo">
-        <span class="ms-1 font-weight-bold text-white">Metadata Dashboard</span>
-      </a>
-    </div>
-    <hr class="horizontal light mt-0 mb-2">
-    <div class="collapse navbar-collapse w-auto max-height-vh-100" id="sidenav-collapse-main">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link text-white {% if 'index' in segment %} active bg-gradient-primary {% endif %}"
-             href="{% url 'dashboard' %}">
-            <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">dashboard</i>
-            </div>
-            <span class="nav-link-text ms-1">Dashboard</span>
-          </a>
-        </li>
-      </ul>
-        {% if perms.field_site %}
-          <!-- begin field site -->
-      <ul class="nav nav-fill p-1" role="tablist">
-          <li class="nav-item mt-2 col-8">
-            <h6 class="ps-2 ms-2 text-start text-uppercase text-xs text-white font-weight-bolder opacity-8">Field Sites</h6>
-          </li>
-            {% if perms.field_site.view_fieldsite %}
-            <li class="nav-item col-1">
-              <a class="nav-link text-white mb-0 px-0 py-1 {% if 'view_fieldsite' in segment or 'detail_fieldsite' in segment %} active bg-gradient-primary {% endif %}"
-                 href="{% url 'view_fieldsite' %}" data-bs-toggle="tooltip" data-bs-placement="top" title="View">
-                <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-                  <i class="material-icons opacity-10">table_view</i>
-                </div>
-              </a>
-            </li>
-            {% endif %}
-            {% if perms.field_site.add_fieldsite %}
-            <li class="nav-item col-1">
-              <a class="nav-link text-white mb-0 px-0 py-1 {% if 'add_fieldsite' in segment %} active bg-gradient-primary {% endif %}"
-                 href="{% url 'add_fieldsite' %}" data-bs-toggle="tooltip" data-bs-placement="top" title="Add">
-                <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-                  <i class="material-icons opacity-10">add_box</i>
-                </div>
-              </a>
-            </li>
-            {% endif %}
-      </ul>
-        <!-- end field site -->
-        {% endif %}
-        {% if perms.sample_label %}
-      <ul class="nav nav-fill p-1" role="tablist">
-        <li class="nav-item mt-2 col-8">
-          <h6 class="ps-2 ms-2 text-start text-uppercase text-xs text-white font-weight-bolder opacity-8">Sample Labels</h6>
-        </li>
-        {% if perms.sample_label.view_samplelabelrequest %}
-         <li class="nav-item col-1">
-          <a class="nav-link text-white mb-0 px-0 py-1 {% if 'view_samplelabelrequest' in segment or 'detail_samplelabelrequest' in segment %} active bg-gradient-primary {% endif %}"
-             href="{% url 'view_samplelabelrequest' %}" data-bs-toggle="tooltip" data-bs-placement="top" title="View">
-            <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">table_view</i>
-            </div>
-          </a>
-        </li>
-        {% endif %}
-        {% if perms.sample_label.add_samplelabelrequest %}
-        <li class="nav-item col-1">
-          <a class="nav-link text-white mb-0 px-0 py-1 {% if 'add_samplelabelrequest' in segment %} active bg-gradient-primary {% endif %}"
-             href="{% url 'add_samplelabelrequest' %}"  data-bs-toggle="tooltip" data-bs-placement="top" title="Add">
-            <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">add_box</i>
-            </div>
-          </a>
-        </li>
-        {% endif %}
-        </ul>
-        {% endif %}
-    </div>
+  <div class="sidenav-header">
+    <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
+    <a class="navbar-brand m-0"
+       href="{% url 'dashboard' %}" target="_blank">
+      <img src="{% static 'assets/img/logo-medna-light.png' %}" class="navbar-brand-img h-100" alt="main_logo">
+      <span class="ms-1 font-weight-bold text-white">Metadata Dashboard</span>
+    </a>
+  </div>
   <hr class="horizontal light mt-0 mb-2">
-    <div class="sidenav-footer position-absolute w-100 bottom-0 ">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link text-white {% if 'detail_dashboardprofile' in segment or 'update_dashboardprofile' in segment %} active bg-gradient-primary {% endif %}"
+  <div class="collapse navbar-collapse w-auto max-height-vh-100" id="sidenav-collapse-main">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link text-white {% if 'index' in segment %} active bg-gradient-primary {% endif %}"
+           href="{% url 'dashboard' %}">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">dashboard</i>
+          </div>
+          <span class="nav-link-text ms-1">Dashboard</span>
+        </a>
+      </li>
+    </ul>
+    {% if perms.field_site %}
+    <!-- begin field site -->
+    <ul class="nav nav-fill p-1" role="tablist">
+      <li class="nav-item mt-2 col-8">
+        <h6 class="ps-2 ms-2 text-start text-uppercase text-xs text-white font-weight-bolder opacity-8">Field Sites</h6>
+      </li>
+      {% if perms.field_site.view_fieldsite %}
+      <li class="nav-item col-1">
+        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'view_fieldsite' in segment or 'detail_fieldsite' in segment %} active bg-gradient-primary {% endif %}"
+           href="{% url 'view_fieldsite' %}" data-bs-toggle="tooltip" data-bs-placement="top" title="View">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">table_view</i>
+          </div>
+        </a>
+      </li>
+      {% endif %}
+      {% if perms.field_site.add_fieldsite %}
+      <li class="nav-item col-1">
+        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'add_fieldsite' in segment %} active bg-gradient-primary {% endif %}"
+           href="{% url 'add_fieldsite' %}" data-bs-toggle="tooltip" data-bs-placement="top" title="Add">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">add_box</i>
+          </div>
+        </a>
+      </li>
+      {% endif %}
+    </ul>
+    <!-- end field site -->
+    {% endif %}
+    {% if perms.sample_label %}
+    <!-- begin sample label -->
+    <ul class="nav nav-fill p-1" role="tablist">
+      <li class="nav-item mt-2 col-8">
+        <h6 class="ps-2 ms-2 text-start text-uppercase text-xs text-white font-weight-bolder opacity-8">Sample Labels</h6>
+      </li>
+      {% if perms.sample_label.view_samplelabelrequest %}
+      <li class="nav-item col-1">
+        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'view_samplelabelrequest' in segment or 'detail_samplelabelrequest' in segment %} active bg-gradient-primary {% endif %}"
+           href="{% url 'view_samplelabelrequest' %}" data-bs-toggle="tooltip" data-bs-placement="top" title="View">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">table_view</i>
+          </div>
+        </a>
+      </li>
+      {% endif %}
+      {% if perms.sample_label.add_samplelabelrequest %}
+      <li class="nav-item col-1">
+        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'add_samplelabelrequest' in segment %} active bg-gradient-primary {% endif %}"
+           href="{% url 'add_samplelabelrequest' %}"  data-bs-toggle="tooltip" data-bs-placement="top" title="Add">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">add_box</i>
+          </div>
+        </a>
+      </li>
+      {% endif %}
+    </ul>
+    <!-- end sample label -->
+    {% endif %}
+    {% if perms.field_survey %}
+    <!-- begin field survey -->
+    <ul class="nav nav-fill p-1" role="tablist">
+      <li class="nav-item mt-2 col-8">
+        <h6 class="ps-2 ms-2 text-start text-uppercase text-xs text-white font-weight-bolder opacity-8">Field Sites</h6>
+      </li>
+      {% if perms.field_survey.view_fieldsurvey %}
+      <li class="nav-item col-1">
+        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'view_fieldsurveyfilters' in segment %} active bg-gradient-primary {% endif %}"
+           href="{% url 'view_fieldsurveyfilters' %}" data-bs-toggle="tooltip" data-bs-placement="top" title="View">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">table_view</i>
+          </div>
+        </a>
+      </li>
+      {% endif %}
+    </ul>
+    <!-- end field survey -->
+    {% endif %}
+  </div>
+  <hr class="horizontal light mt-0 mb-2">
+  <div class="sidenav-footer position-absolute w-100 bottom-0 ">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link text-white {% if 'detail_dashboardprofile' in segment or 'update_dashboardprofile' in segment %} active bg-gradient-primary {% endif %}"
            href="{% url 'detail_dashboardprofile' %}">
-            <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">person</i>
-            </div>
-            <span class="nav-link-text ms-1">Profile</span>
-          </a>
-        </li>
-        {% if user.is_active and user.is_staff %}
-        <li class="nav-item">
-          <a class="nav-link text-white {% if 'admin' in segment %} active bg-gradient-primary {% endif %}" href="{% url 'admin:index' %}">
-            <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">admin_panel_settings</i>
-            </div>
-            <span class="nav-link-text ms-1">Admin</span>
-          </a>
-        </li>
-        {% endif %}
-        <li class="nav-item">
-          <a class="nav-link text-white " href="{% url 'logout' %}">
-            <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">directions_run</i>
-            </div>
-            <span class="nav-link-text ms-1">Logout</span>
-          </a>
-        </li>
-      </ul>
-      <div class="mx-3">
-        <a class="btn bg-gradient-primary mt-4 w-100" target="_blank" href="{% url 'home' %}" type="button">Main</a>
-      </div>
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">person</i>
+          </div>
+          <span class="nav-link-text ms-1">Profile</span>
+        </a>
+      </li>
+      {% if user.is_active and user.is_staff %}
+      <li class="nav-item">
+        <a class="nav-link text-white {% if 'admin' in segment %} active bg-gradient-primary {% endif %}" href="{% url 'admin:index' %}">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">admin_panel_settings</i>
+          </div>
+          <span class="nav-link-text ms-1">Admin</span>
+        </a>
+      </li>
+      {% endif %}
+      <li class="nav-item">
+        <a class="nav-link text-white " href="{% url 'logout' %}">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">directions_run</i>
+          </div>
+          <span class="nav-link-text ms-1">Logout</span>
+        </a>
+      </li>
+    </ul>
+    <div class="mx-3">
+      <a class="btn bg-gradient-primary mt-4 w-100" target="_blank" href="{% url 'home' %}" type="button">Main</a>
     </div>
+  </div>
 </aside>
   
