Added humanize to settings and load in table.html for frontend templates

--- a/frontend/templates/django_tables2/table.html
+++ b/frontend/templates/django_tables2/table.html
@@ -1,5 +1,5 @@
 {% load django_tables2 %}
-{% load i18n %}
+{% load i18n humanize %}
 {% block table-wrapper %}
 <div class="table-responsive p-0">
     {% block table %}
