added humanize load tag to field-filter-list.html template

--- a/frontend/templates/django_tables2/table.html
+++ b/frontend/templates/django_tables2/table.html
@@ -1,5 +1,6 @@
 {% load django_tables2 %}
-{% load i18n humanize %}
+{% load i18n %}
+{% load humanize %}
 {% block table-wrapper %}
 <div class="table-responsive p-0">
     {% block table %}
