--- a/frontend/templates/includes/django-material-dashboard/sidebar.html
+++ b/frontend/templates/includes/django-material-dashboard/sidebar.html
@@ -103,7 +103,7 @@
     <!-- begin wet lab -->
     <ul class="nav nav-fill p-1" role="tablist">
       <li class="nav-item mt-2 col-12">
-        <h6 class="ps-2 ms-2 text-start text-uppercase text-xs text-white font-weight-bolder opacity-8">Wet Lab</h6>
+        <h6 class="text-uppercase text-xs text-white font-weight-bolder opacity-8">Wet Lab</h6>
       </li>
     </ul>
     {% if perms.wet_lab.view_extraction %}
@@ -287,6 +287,229 @@
     {% endif %}
     <hr class="horizontal light mt-0 mb-2">
     <!-- end wet lab -->
+    {% endif %}
+    {% if perms.freezer_inventory %}
+    <!-- begin freezer inventory -->
+    <ul class="nav nav-fill p-1" role="tablist">
+      <li class="nav-item mt-2 col-12">
+        <h6 class="text-uppercase text-xs text-white font-weight-bolder opacity-8">Freezer Inventory</h6>
+      </li>
+    </ul>
+    {% if perms.freezer_inventory.view_freezerinventory %}
+    <!-- begin freezerinventory -->
+    <ul class="nav nav-fill p-1" role="tablist">
+      <li class="nav-item mt-2 col-8">
+        <h6 class="ps-2 ms-2 text-start text-uppercase text-xs text-white font-weight-bolder opacity-8">Inventory</h6>
+      </li>
+      <li class="nav-item col-1">
+        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'view_freezerinventory' in segment or 'detail_freezerinventory' in segment %} active bg-gradient-primary {% endif %}"
+           href="{% url 'view_freezerinventory' %}" data-bs-toggle="tooltip" data-bs-placement="top" title="View">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">table_view</i>
+          </div>
+        </a>
+      </li>
+      {% if perms.freezer_inventory.add_freezerinventory %}
+      <li class="nav-item col-1">
+        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'add_freezerinventory' in segment %} active bg-gradient-primary {% endif %}"
+           href="{% url 'add_freezerinventory' %}"  data-bs-toggle="tooltip" data-bs-placement="top" title="Add">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">add_box</i>
+          </div>
+        </a>
+      </li>
+    {% endif %}
+    </ul>
+    <!-- end freezerinventory -->
+    {% endif %}
+    {% if perms.freezer_inventory.view_freezerinventoryreturnmetadata %}
+    <!-- begin freezerinventoryreturnmetadata -->
+    <ul class="nav nav-fill p-1" role="tablist">
+      <li class="nav-item mt-2 col-8">
+        <h6 class="ps-2 ms-2 text-start text-uppercase text-xs text-white font-weight-bolder opacity-8">Metadata</h6>
+      </li>
+      <li class="nav-item col-1">
+        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'view_freezerinventoryreturnmetadata' in segment or 'detail_freezerinventoryreturnmetadata' in segment %} active bg-gradient-primary {% endif %}"
+           href="{% url 'view_freezerinventoryreturnmetadata' %}" data-bs-toggle="tooltip" data-bs-placement="top" title="View">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">table_view</i>
+          </div>
+        </a>
+      </li>
+    </ul>
+    <!-- end freezerinventoryreturnmetadata -->
+    {% endif %}
+    {% if perms.freezer_inventory.view_freezerinventorylog %}
+    <!-- begin freezerinventorylog -->
+    <ul class="nav nav-fill p-1" role="tablist">
+      <li class="nav-item mt-2 col-8">
+        <h6 class="ps-2 ms-2 text-start text-uppercase text-xs text-white font-weight-bolder opacity-8">Log</h6>
+      </li>
+      <li class="nav-item col-1">
+        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'view_freezerinventorylog' in segment or 'detail_freezerinventorylog' in segment %} active bg-gradient-primary {% endif %}"
+           href="{% url 'view_freezerinventorylog' %}" data-bs-toggle="tooltip" data-bs-placement="top" title="View">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">table_view</i>
+          </div>
+        </a>
+      </li>
+    </ul>
+    <!-- end freezerinventorylog -->
+    {% endif %}
+    <hr class="horizontal light mt-0 mb-2">
+    <!-- end freezer inventory -->
+    {% endif %}
+
+    {% if perms.bioinfo %}
+    <!-- begin bioinfo -->
+    <ul class="nav nav-fill p-1" role="tablist">
+      <li class="nav-item mt-2 col-12">
+        <h6 class="text-uppercase text-xs text-white font-weight-bolder opacity-8">Bioinformatics</h6>
+      </li>
+    </ul>
+
+    {% if perms.bioinfo.view_denoiseclustermetadata %}
+    <!-- begin denoiseclustermetadata -->
+    <ul class="nav nav-fill p-1" role="tablist">
+      <li class="nav-item mt-2 col-8">
+        <h6 class="ps-2 ms-2 text-start text-uppercase text-xs text-white font-weight-bolder opacity-8">Denoise Cluster Metadata</h6>
+      </li>
+      <li class="nav-item col-1">
+        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'view_denoiseclustermetadata' in segment or 'detail_denoiseclustermetadata' in segment %} active bg-gradient-primary {% endif %}"
+           href="{% url 'view_denoiseclustermetadata' %}" data-bs-toggle="tooltip" data-bs-placement="top" title="View">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">table_view</i>
+          </div>
+        </a>
+      </li>
+      {% if perms.bioinfo.add_denoiseclustermetadata %}
+      <li class="nav-item col-1">
+        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'add_denoiseclustermetadata' in segment %} active bg-gradient-primary {% endif %}"
+           href="{% url 'add_denoiseclustermetadata' %}"  data-bs-toggle="tooltip" data-bs-placement="top" title="Add">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">add_box</i>
+          </div>
+        </a>
+      </li>
+    {% endif %}
+    </ul>
+    <!-- end denoiseclustermetadata -->
+    {% endif %}
+
+    {% if perms.bioinfo.view_featureoutput %}
+    <!-- begin featureoutput -->
+    <ul class="nav nav-fill p-1" role="tablist">
+      <li class="nav-item mt-2 col-8">
+        <h6 class="ps-2 ms-2 text-start text-uppercase text-xs text-white font-weight-bolder opacity-8">Feature Output</h6>
+      </li>
+      <li class="nav-item col-1">
+        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'view_featureoutput' in segment or 'detail_featureoutput' in segment %} active bg-gradient-primary {% endif %}"
+           href="{% url 'view_featureoutput' %}" data-bs-toggle="tooltip" data-bs-placement="top" title="View">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">table_view</i>
+          </div>
+        </a>
+      </li>
+      {% if perms.bioinfo.add_featureoutput %}
+      <li class="nav-item col-1">
+        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'add_featureoutput' in segment %} active bg-gradient-primary {% endif %}"
+           href="{% url 'add_featureoutput' %}"  data-bs-toggle="tooltip" data-bs-placement="top" title="Add">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">add_box</i>
+          </div>
+        </a>
+      </li>
+    {% endif %}
+    </ul>
+    <!-- end featureoutput -->
+    {% endif %}
+
+    {% if perms.bioinfo.view_featureread %}
+    <!-- begin featureread -->
+    <ul class="nav nav-fill p-1" role="tablist">
+      <li class="nav-item mt-2 col-8">
+        <h6 class="ps-2 ms-2 text-start text-uppercase text-xs text-white font-weight-bolder opacity-8">Feature Read</h6>
+      </li>
+      <li class="nav-item col-1">
+        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'view_featureread' in segment or 'detail_featureread' in segment %} active bg-gradient-primary {% endif %}"
+           href="{% url 'view_featureread' %}" data-bs-toggle="tooltip" data-bs-placement="top" title="View">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">table_view</i>
+          </div>
+        </a>
+      </li>
+      {% if perms.bioinfo.add_featureread %}
+      <li class="nav-item col-1">
+        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'add_featureread' in segment %} active bg-gradient-primary {% endif %}"
+           href="{% url 'add_featureread' %}"  data-bs-toggle="tooltip" data-bs-placement="top" title="Add">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">add_box</i>
+          </div>
+        </a>
+      </li>
+    {% endif %}
+    </ul>
+    <!-- end featureread -->
+    {% endif %}
+
+    {% if perms.bioinfo.view_annotationmetadata %}
+    <!-- begin annotationmetadata -->
+    <ul class="nav nav-fill p-1" role="tablist">
+      <li class="nav-item mt-2 col-8">
+        <h6 class="ps-2 ms-2 text-start text-uppercase text-xs text-white font-weight-bolder opacity-8">Annotation Metadata</h6>
+      </li>
+      <li class="nav-item col-1">
+        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'view_annotationmetadata' in segment or 'detail_annotationmetadata' in segment %} active bg-gradient-primary {% endif %}"
+           href="{% url 'view_annotationmetadata' %}" data-bs-toggle="tooltip" data-bs-placement="top" title="View">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">table_view</i>
+          </div>
+        </a>
+      </li>
+      {% if perms.bioinfo.add_annotationmetadata %}
+      <li class="nav-item col-1">
+        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'add_annotationmetadata' in segment %} active bg-gradient-primary {% endif %}"
+           href="{% url 'add_annotationmetadata' %}"  data-bs-toggle="tooltip" data-bs-placement="top" title="Add">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">add_box</i>
+          </div>
+        </a>
+      </li>
+    {% endif %}
+    </ul>
+    <!-- end annotationmetadata -->
+    {% endif %}
+
+    {% if perms.bioinfo.view_taxonomicannotation %}
+    <!-- begin taxonomicannotation -->
+    <ul class="nav nav-fill p-1" role="tablist">
+      <li class="nav-item mt-2 col-8">
+        <h6 class="ps-2 ms-2 text-start text-uppercase text-xs text-white font-weight-bolder opacity-8">Taxonomic Annotation</h6>
+      </li>
+      <li class="nav-item col-1">
+        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'view_taxonomicannotation' in segment or 'detail_taxonomicannotation' in segment %} active bg-gradient-primary {% endif %}"
+           href="{% url 'view_taxonomicannotation' %}" data-bs-toggle="tooltip" data-bs-placement="top" title="View">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">table_view</i>
+          </div>
+        </a>
+      </li>
+      {% if perms.bioinfo.add_taxonomicannotation %}
+      <li class="nav-item col-1">
+        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'add_taxonomicannotation' in segment %} active bg-gradient-primary {% endif %}"
+           href="{% url 'add_taxonomicannotation' %}"  data-bs-toggle="tooltip" data-bs-placement="top" title="Add">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">add_box</i>
+          </div>
+        </a>
+      </li>
+    {% endif %}
+    </ul>
+    <!-- end taxonomicannotation -->
+    {% endif %}
+
+    <hr class="horizontal light mt-0 mb-2">
+    <!-- end bioinfo -->
     {% endif %}
   </div>
   <hr class="horizontal light mt-0 mb-2">
