update frontend sidebar template

--- a/frontend/templates/includes/django-material-dashboard/sidebar.html
+++ b/frontend/templates/includes/django-material-dashboard/sidebar.html
@@ -493,8 +493,9 @@
     <!-- end bioinfo -->
     {% endif %}
   </div>
+  <hr class="horizontal light mt-0 mb-2">
   <div class="sidenav-footer position-absolute w-100 bottom-0 ">
-    <hr class="horizontal light mt-0 mb-2">
+    <div class="mx-3">
     <ul class="nav nav-fill p-1">
       <li class="nav-item mt-2 col-4">
         <a class="nav-link text-white {% if 'detail_dashboardprofile' in segment or 'update_dashboardprofile' in segment %} active bg-gradient-primary {% endif %}"
@@ -524,6 +525,7 @@
         </a>
       </li>
     </ul>
+    </div>
     <div class="mx-3">
       <a class="btn bg-gradient-primary mt-3 w-100" target="_blank" href="{% url 'home' %}" type="button">Main</a>
     </div>
