added hr to sidebar at end of bioinfo section

--- a/frontend/templates/includes/django-material-dashboard/sidebar.html
+++ b/frontend/templates/includes/django-material-dashboard/sidebar.html
@@ -490,6 +490,7 @@
     </ul>
     <!-- end taxonomicannotation -->
     {% endif %}
+    <hr class="horizontal light mt-0 mb-2">
     <!-- end bioinfo -->
     {% endif %}
   </div>
